--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@farango/calendar_library",
-  "version": "0.0.37",
+  "version": "0.0.38",
   "main": "dist/index.js",
   "author": "Andrés Arango",
   "license": "MIT",
@@ -28,15 +28,16 @@
     "@babel/cli": "^7.25.7",
     "antd": "^5.21.4",
     "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
     "postcss": "^8.4.47",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.14",
-    "css-loader": "^7.1.2",
+    "react-router-dom": "^7.1.1",
     "sass": "^1.80.2",
     "sass-loader": "^16.0.2",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
