--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "sass": "^1.80.2",
     "sass-loader": "^16.0.2",
