--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@farango/calendar_library",
-  "version": "0.0.43",
+  "version": "0.0.44",
   "main": "dist/index.js",
   "author": "Andrés Arango",
   "license": "MIT",
@@ -38,6 +38,7 @@
     "sass": "^1.80.2",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
+    "styled-components": "^6.1.14",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
