--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@farango/calendar_library",
-  "version": "0.0.44",
+  "version": "0.0.46",
   "main": "dist/index.js",
   "author": "Andrés Arango",
   "license": "MIT",
@@ -19,13 +19,14 @@
     "scss"
   ],
   "scripts": {
-    "build": "babel src --out-dir dist",
+    "build": "webpack --mode production",
     "demo": "webpack serve --config webpack.demo.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@babel/cli": "^7.25.7",
+    "@heroicons/react": "^2.2.0",
     "antd": "^5.21.4",
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
