--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "@babel/cli": "^7.25.7",
     "@heroicons/react": "^2.2.0",
     "antd": "^5.21.4",
-    "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
-    "postcss": "^8.4.47",
+    "lucide-react": "^0.512.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,8 +39,7 @@
     "sass": "^1.80.2",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
-    "styled-components": "^6.1.14",
-    "tailwindcss": "^3.4.14"
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
@@ -49,11 +47,15 @@
     "@babel/preset-react": "^7.25.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
+    "postcss": "^8.5.4",
+    "postcss-loader": "^8.1.1",
     "sass": "^1.80.2",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
