--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@farango/calendar_library",
-  "version": "0.0.53",
+  "version": "0.0.56",
   "main": "dist/index.js",
   "author": "Andrés Arango",
   "license": "MIT",
@@ -22,7 +22,10 @@
     "start": "webpack serve --mode development --config webpack.demo.js --open",
     "build": "webpack --mode production",
     "demo": "webpack serve --config webpack.demo.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --maxWorkers=2"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
@@ -43,13 +46,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
-    "@babel/preset-env": "^7.25.8",
-    "@babel/preset-react": "^7.25.7",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.0.0",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.0",
+    "jest-coverage-badges": "^1.1.2",
+    "jest-environment-jsdom": "^30.0.0",
     "postcss": "^8.5.4",
     "postcss-loader": "^8.1.1",
     "sass": "^1.80.2",
